
## [3.1] 2016-10-05 Samuel Kerrien
* Added optional attribute list on the following entities: Specimen, Sample, Activity
* Added optional parameter list on activity to model numerical parameters (eg. extra cellular concentration of calcium)
* Note that this version is backward compatible with 3.0.

## [3.0] 2016-06-24 Samuel Kerrien
* Made classification.activity_ref optional.

## [3.0-RC7] 2016-03-14 Mohameth François Sy / Lomig Mégard
### Added fields
* Added the field /agents.contributors.affiliations field which groups former /agents.contributors.organisation_ref (required) and /agents.contributors.laboratory fields
  All contributor's affiliations are now grouped in one array /agents.contributors.affiliations
* Added the field /activities.protocol.designer (string) to keep the information about the lab or person which designed the protocol.
* datasets[].license that contains the license information. Implemented as ontology term.
* specimen[].age.unit is a new mandatory field (enum) that indicates which unit is used for the age value.
* specimen[].age.range_end_value is an optional field that indicated the end of the range. If not set, the age is not a range (backward compatible).
* Updated the `release` enum: `HBP` is now `hbp_only`.

### Others
* removed minItems constraint when the field is optional.

## [3.0-RC6] 2016-03-03 Yuri Katkov / Samuel Kerrien /  Lomig Mégard / Mohameth François Sy
### Added fields
* Added the field activities.protocol.id field
* Add resources.retrieval_date field. This date corresponds to when the resources was downloaded from a source.

### Updated fields
* Registration.data_providers became Registration.agents object with 'id' and 'roles' fields.
* The rational of this change is to separate agents with experimental roles (involved in activities) from those involved as principal investigator or data provider.
* Made specimen.age, specimen.name, specimen.sex and resources.mime-type fields optional